FIX billing engine response structure

--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -122,10 +122,14 @@
                     @if (item.options.pricing) {
                        <div class="items-center text-sm text-white">
                           @for (price of item.options.pricing; track price) {
-                             <div class="flex place-content-center flex-col">
-                                <span class="font-bold text-gray-900 dark:text-primary-50 mr-3">{{ price['priceType'] }}:</span>
-                                <span class="text-xs text-gray-900 dark:text-primary-50">{{ price['text'] }}</span>
-                             </div>
+                            <div class="flex place-content-center flex-col">
+                              <span class="font-bold text-gray-900 dark:text-primary-50 mr-3">{{ price['priceType'] }}:</span>
+                              <span class="text-xs text-gray-900 dark:text-primary-50">{{ price['price']['dutyFreeAmount']['value'] }} {{ price['price']['dutyFreeAmount']['unit'] }}
+                                 @if(hasKey(price, 'recurringChargePeriod')){
+                                    / {{ price['recurringChargePeriod'] }}
+                                 }
+                              </span>
+                           </div>
                           }
                           </div>
                     }
