--- a/src/app/shared/cart-drawer/cart-drawer.component.html
+++ b/src/app/shared/cart-drawer/cart-drawer.component.html
@@ -36,7 +36,11 @@
                            @for (price of item.options.pricing; track price) {
                               <div class="flex place-content-center flex-col">
                                  <span class="font-bold text-gray-900 dark:text-primary-50 mr-3">{{ price['priceType'] }}:</span>
-                                 <span class="text-xs text-gray-900 dark:text-primary-50">{{ price['text'] }}</span>
+                                 <span class="text-xs text-gray-900 dark:text-primary-50">{{ price['price']['dutyFreeAmount']['value'] }} {{ price['price']['dutyFreeAmount']['unit'] }}
+                                    @if(hasKey(price, 'recurringChargePeriod')){
+                                       / {{ price['recurringChargePeriod'] }}
+                                    }
+                                 </span>
                               </div>
                            }
                            </div>
