--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -109,7 +109,11 @@
         @for (item of price; track item) {
           <div class="flex justify-between mb-2">
             <span class="font-medium capitalize">{{ item['priceType'] }}:</span>
-            <span class="font-bold">{{ item['text'] }}</span>
+            <span class="font-bold">{{ item['price']['dutyFreeAmount']['value'] }} {{ item['price']['dutyFreeAmount']['unit'] }}
+              @if(hasKey(item, 'recurringChargePeriod')){
+                / {{ item['recurringChargePeriod'] }}
+              }
+            </span>
           </div>
         }
       </div>
