ADD pricetype to price components table

--- a/src/app/pages/seller-offerings/offerings/seller-offer/new-price-plan/new-price-plan.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/new-price-plan/new-price-plan.component.html
@@ -524,6 +524,9 @@
                                         Price
                                     </th>
                                     <th scope="col" class="px-6 py-3">
+                                        Price Type
+                                    </th>
+                                    <th scope="col" class="px-6 py-3">
                                         Actions
                                     </th>
                                 </tr>
@@ -538,7 +541,10 @@
                                             {{price.description}} 
                                         </td>
                                         <td class="px-6 py-4 text-wrap break-all">
-                                            {{price.price.value}} 
+                                            {{price.price.value}} {{price.price.unit}}
+                                        </td>
+                                        <td class="px-6 py-4 text-wrap break-all">
+                                            {{price.priceType}} 
                                         </td>
                                         <td class="px-6 py-4">
                                             <button (click)="deletePriceComp(price)" class="font-bold text-white bg-red-500 mr-2 rounded-3xl">
