--- a/src/app/shared/cart-drawer/cart-drawer.component.html
+++ b/src/app/shared/cart-drawer/cart-drawer.component.html
@@ -67,7 +67,7 @@
 
    <div class="mt-auto p-4 w-full grid grid-cols-1 gap-4 overflow-y-hidden">
 
-   <button (click)="goToShoppingCart();"  type="button" 
+   <button (click)="goToShoppingCart();"  type="button" [disabled]="items.length==0" [ngClass]="items.length==0 ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'"
    class="flex sticky w-full items-center justify-center gap-x-2 px-4 py-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
    <svg class="rtl:rotate-180 w-3.5 h-3.5 mr-2 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
