Add invoices table in product orders view

--- a/src/app/pages/product-orders/product-orders.component.html
+++ b/src/app/pages/product-orders/product-orders.component.html
@@ -48,7 +48,7 @@
             <app-order-info></app-order-info>
         }
         @if(show_invoices){
-           <h1>AQUI IRAN LAS BILLINGS</h1>>
+            <app-invoices-info></app-invoices-info>
         }
         </div>
     </div>
